--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +18,7 @@
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-icons": "^4.3.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-tradingview-widget": "^1.3.2",
